[package]
name = "cargo-tracker"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.76"
reqwest = { version = "0.11.23", features = ["blocking", "json"] }
serde_json = "1.0.108"
time = { version = "0.3.31", features = ["parsing"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
